# companys-interview-task-4barch-images

./: CMakeLists.txt  LICENSE  README.md
cmake/: template-project-misc-variables-declare.cmake
cmake/dockerers/: template-project-docker-single-runner-target.cmake  template-project-docker-variables-declare.cmake
doc/: README.uk_UA.md
misc/: Dockerfile.in
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  ApplicationContext.h  ApplicationHelpPrinter.cpp  CMDParamNames.h  CommandLineParser.cpp
src/app/tests/: CMakeLists.txt
src/app/tests/mocks/ApplicationContext/src/app/: ApplicationContext.h
src/lib/: CMakeLists.txt
src/lib/cmake/: barch-coder-0-libcmake-module-gen.cmake  barch-coder-0Config.cmake.in  barch-coder0Config.cmake.in
src/lib/facade/: BarchImage.cpp  BarchImage.h  CMakeLists.txt  IBarchImage.h  ILib.h  LibraryContext.h  LibraryFacade.cpp  LibraryFacade.h
src/lib/facade/includes/: IBarchImage.h  ILib.h  LibraryFacade.h  Pixel.h
src/lib/facade/tests/: CMakeLists.txt
src/lib/facade/tests/mocks/LibFactory/src/lib/libmain/: LibFactory.h
src/lib/facade/tests/unit/LibraryFacade/: CMakeLists.txt  UTEST_LibraryFacade.cpp
src/lib/libmain/: BMPImage.cpp  BMPImage.h  BarchImage.cpp  BarchImage.h  CMakeLists.txt  LibFactory.cpp  LibFactory.h  LibMain.cpp  LibMain.h
src/lib/libmain/converters/: BMP2BarchConverter.cpp  BMP2BarchConverter.h  BMP2BarchConverter0.cpp  BMP2BarchConverter0.h  BMPAndBarchConverter0Base.cpp  BMPAndBarchConverter0Base.h  Barch2BMPConverter0.cpp  Barch2BMPConverter0.h  CMakeLists.txt
src/lib/libmain/converters/tests/: CMakeLists.txt
src/lib/libmain/converters/tests/unit/: CMakeLists.txt
src/lib/libmain/converters/tests/unit/BMP2BarchConverter/: CMakeLists.txt  UTEST_BMP2BarchConverter.cpp  UTEST_BMP2BarchConverter0.cpp
src/lib/libmain/converters/tests/unit/Barch2BMPConverter0/: CMakeLists.txt  UTEST_Barch2BMPConverter0.cpp
src/lib/libmain/images/: BMPImage.cpp  BMPImage.h  BarchImage.cpp  BarchImage.h  CMakeLists.txt
src/lib/libmain/images/tests/: CMakeLists.txt
src/lib/libmain/images/tests/unit/: CMakeLists.txt
src/lib/libmain/images/tests/unit/BMPImage/: CMakeLists.txt  UTEST_BMPImage.cpp
src/lib/libmain/images/tests/unit/BarchImage/: CMakeLists.txt  UTEST_BarchImage.cpp
src/lib/libmain/readers/: BMP.h  BMPReader.cpp  BMPReader.h  BarchReader0.cpp  BarchReader0.h  CMakeLists.txt  IReader.h
src/lib/libmain/readers/tests/component/: CMakeLists.txt  readers_includes.h.in
src/lib/libmain/readers/tests/component/BMPReader/: BMPReaderDataProvider.h  CMakeLists.txt  CTEST_BMPReader.cpp
src/lib/libmain/readers/tests/component/BarchReader/: CMakeLists.txt  CTEST_BarchReader0.cpp
src/lib/libmain/tests/: CMakeLists.txt
src/lib/libmain/tests/component/: CMakeLists.txt  LibMain_includes.h.in
src/lib/libmain/tests/component/LibMain/: CMakeLists.txt  CTEST_LibMain.cpp
src/lib/libmain/tests/unit/BMPImage/: CMakeLists.txt  UTEST_BMPImage.cpp
src/lib/libmain/tests/unit/LibFactory/: CMakeLists.txt  UTEST_LibFactory.cpp
src/lib/libmain/tests/unit/LibMain/: CMakeLists.txt  UTEST_LibMain.cpp
src/lib/libmain/writers/: BarchWriter.cpp  BarchWriter.h  BarchWriter0.cpp  BarchWriter0.h  CMakeLists.txt
src/lib/libmain/writers/tests/: CMakeLists.txt
src/lib/libmain/writers/tests/component/: CMakeLists.txt
src/lib/libmain/writers/tests/component/BarchWriter0/: CMakeLists.txt  CTEST_BarchWriter0.cpp
src/qt6/: CMakeLists.txt  QMLRes.h  Qt6Initer.cpp  Qt6Initer.h  resources.qrc
src/qt6/models/: CMakeLists.txt  ErrorSingleModel.cpp  ErrorSingleModel.h  FileListModel.cpp  FileListModel.h  ImageFileModel.cpp  ImageFileModel.h
src/qt6/ui/qml/: main.qml
src/qt6/ui/qml/components/: ErrorDialog.qml  ImagesList.qml
src/scripts/: build-debug.sh  build-release.sh
src/tests/mocks/LibMain/src/lib/libmain/: LibMain.h
src/tests/mocks/LibraryContext/: LibraryContext.h
